# RV32I_On_Minisys

./: .gitignore  CMakeLists.txt  Makefile  target.coe
.cache/clangd/index/: hal.h.E4524F874A9A4704.idx  main.c.80636AA67DF086AC.idx  start.S.295930C33BDF1DF7.idx  trm.c.B2CC90C523C873E6.idx  uart_lite.c.35C30D3775C1A944.idx  uart_lite.h.0FAE1F17760C5DBB.idx
am/: Makefile
am/include/: am.h  gpio.h  hal.h  hal_status.h  timer.h  uart_lite.h
am/src/: cte.c  gpio.c  start.S  timer.c  trap.S  trm.c  uart_lite.c
core/include/: hal.h
core/src/: main.c
program/include/: am.h
program/srcs/: add-longlong.c  cte-test.c  dummy.c  test-str.c
scripts/: common.mk  linker.ld
sources/: CCDesign.xpr
sources/CCDesign.srcs/constrs_1/new/: pin.xdc
sources/CCDesign.srcs/sim_1/new/: testbench_top.v
sources/CCDesign.srcs/sources_1/bd/AXI_Interconnect/: AXI_Interconnect.bd  AXI_Interconnect.bda
sources/CCDesign.srcs/sources_1/bd/AXI_Interconnect/ip/AXI_Interconnect_axi_bram_ctrl_0_1/: AXI_Interconnect_axi_bram_ctrl_0_1.xci
sources/CCDesign.srcs/sources_1/bd/AXI_Interconnect/ip/AXI_Interconnect_axi_crossbar_0_0/: AXI_Interconnect_axi_crossbar_0_0.xci
sources/CCDesign.srcs/sources_1/bd/AXI_Interconnect/ui/: bd_1321e7bb.ui
sources/CCDesign.srcs/sources_1/bd/coreAXI/: coreAXI.bd  coreAXI.bda
sources/CCDesign.srcs/sources_1/bd/coreAXI/ui/: bd_d7be77f3.ui
sources/CCDesign.srcs/sources_1/ip/blk_mem_gen_0/: blk_mem_gen_0.xci
sources/CCDesign.srcs/sources_1/ip/clk_wiz_0/: clk_wiz_0.xci
sources/CCDesign.srcs/sources_1/new/: alu.v  asyncRstSyncRelease.v  branchCond.v  clint.v  contr_gen.v  core.v  csr.v  decoder.v  digital.v  gpio.v  ifu.v  jumpCalc.v  pcReg.v  registerFile.v  top.v
sources/CCDesign.srcs/utils_1/imports/synth_1/: top.dcp
sources/sources_1/bd/AXI_Interconnect/ip/AXI_Interconnect_axi_bram_ctrl_0_1/: AXI_Interconnect_axi_bram_ctrl_0_1.xci
sources/sources_1/bd/AXI_Interconnect/ip/AXI_Interconnect_axi_crossbar_0_0/: AXI_Interconnect_axi_crossbar_0_0.xci
sources/sources_1/bd/AXI_Interconnect/ip/AXI_Interconnect_blk_mem_gen_0_4/: AXI_Interconnect_blk_mem_gen_0_4.xci
sources/sources_1/bd/AXI_Interconnect/ui/: bd_1321e7bb.ui
sources/sources_1/bd/coreAXI/: coreAXI.bd
sources/sources_1/bd/coreAXI/ip/coreAXI_axi_crossbar_0_0/: coreAXI_axi_crossbar_0_0.xci
sources/sources_1/new/: alu.v  core.v  immGenertor.v  lsu.v  registerFile.v  top.v
test/srcs/: add.c  bit.c  bitrev.c.disabled  cte-test.c  dummy.c  flashread.c.disabled  flashtest.c.disabled  hello-str.c  ioe-test.c  memtest.c.disabled  psram-test.c.disabled  sdram.c.disabled  test-str.c  tim-test.c
util/: bin2coe  bin2coe.c
(+6 files in other folders)
